fix for bug #160586. IMAP folder moved to ~/<folder> instead of ~/mail/<folder> when moving from sub-folder r/sr=henry.jia,sspitzer thanks to philip.zhao@sun.com for the patch.